# snap-predicates

./: .gitignore  Data-Predicate-Env.html  Data-Predicate.html  LICENSE  README.lhs  README.md  Snap-Predicates-MediaTypes.html  Snap-Predicates-Params.html  Snap-Predicates-Tutorial.html  Snap-Predicates.html  Snap-Routes.html  doc-index.html  index-frames.html  index.html  mini_Data-Predicate-Env.html  mini_Data-Predicate.html  mini_Snap-Predicates-MediaTypes.html  mini_Snap-Predicates-Params.html  mini_Snap-Predicates-Tutorial.html  mini_Snap-Predicates.html  mini_Snap-Routes.html  predicates.cabal  snap-predicates.cabal  snap-predicates.haddock
src/: Predicates.hs
src/Data/: Predicate.hs
src/Data/ByteString/: Readable.hs
src/Data/Predicate/: Delta.hs  Descr.hs  Env.hs  Internal.hs  Readable.hs  Typeof.hs
src/Monad/: Helpers.hs
src/Snap/: Predicate.hs  Predicates.hs  Route.hs  Routes.hs
src/Snap/Predicate/: Accept.hs  Content.hs  Convert.hs  Doc.hs  Error.hs  Header.hs  Internal.hs  MediaType.hs  Param.hs  Tutorial.hs  Types.hs
src/Snap/Predicate/MediaType/: Internal.hs
src/Snap/Predicate/Parser/: Accept.hs  Shared.hs
src/Snap/Predicates/: Accept.hs  Content.hs  Error.hs  Headers.hs  Internal.hs  MediaTypes.hs  Params.hs  Tutorial.hs
src/Snap/Predicates/MediaTypes/: Internal.hs
src/Snap/Predicates/Parsers/: Accept.hs  Shared.hs
test/: TestSuite.hs
test/Tests/Data/: Predicate.hs
test/Tests/Snap/: Predicate.hs  Predicates.hs  Route.hs  Routes.hs
