name:                snap-predicates
version:             0.1.0
synopsis:            Predicates for route definitions.
license:             MIT
license-file:        LICENSE
author:              Toralf Wittner, Brendan Hay
maintainer:          Toralf Wittner <tw@dtex.org>
copyright:           Copyright (c) 2013 Toralf Wittner, Brendan Hay
stability:           experimental
category:            Snap
build-type:          Simple
cabal-version:       >= 1.8
extra-source-files:  README.md

description:
    Provides a definition of a predicate type-class together
    with several concrete implementations which are used to
    constrain the set of possible Snap handlers in a type-safe
    way.

library
    hs-source-dirs:  src
    exposed-modules: Data.Predicate, Snap.Predicates, Snap.Routes

    build-depends:
        base             >= 4   && < 5
      , transformers     >= 0.3
      , bytestring       >= 0.9
      , containers       >= 0.5
      , case-insensitive >= 1.0
      , snap-core        >= 0.9

    ghc-options:
        -Wall
        -O2
        -fwarn-tabs
        -funbox-strict-fields

source-repository head
    type:             git
    location:         https://github.com/twittner/snap-predicates
