name:                snap-predicates
version:             0.5
synopsis:            Declarative routing for Snap.
license:             OtherLicense
license-file:        mpl-2.0.txt
author:              Toralf Wittner, Brendan Hay
maintainer:          Toralf Wittner <tw@dtex.org>
copyright:           Copyright (c) 2013 Toralf Wittner, Brendan Hay
stability:           experimental
category:            Snap
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md

description:
    Provides the definition of a predicate type-class together
    with several concrete implementations which are used to
    constrain the set of possible Snap handlers in a type-safe
    way.

source-repository head
    type:             git
    location:         git://github.com/twittner/snap-predicates.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs -funbox-strict-fields
    ghc-prof-options: -prof -auto-all

    exposed-modules:
        Data.Predicate
      , Data.Predicate.Descr
      , Data.Predicate.Typeof
      , Snap.Predicate
      , Snap.Predicate.Accept
      , Snap.Predicate.Doc
      , Snap.Predicate.Error
      , Snap.Predicate.Param
      , Snap.Predicate.Header
      , Snap.Predicate.Content
      , Snap.Predicate.MediaType
      , Snap.Predicate.Tutorial
      , Snap.Predicate.Types
      , Snap.Route

    other-modules:
        Snap.Predicate.Internal
      , Snap.Predicate.MediaType.Internal
      , Snap.Predicate.Parser.Accept
      , Snap.Predicate.Parser.Shared

    build-depends:
        attoparsec       >= 0.10
      , base             >= 4    && < 5
      , bytestring       >= 0.9
      , case-insensitive >= 1.0
      , containers       >= 0.5
      , monads-tf        >= 0.1
      , singletons       == 0.10.*
      , snap-core        >= 0.9
      , tagged           >= 0.7
      , text             >= 0.11
      , transformers     >= 0.3

test-suite snap-predicates-tests
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   src test
    main-is:          TestSuite.hs
    ghc-options:      -Wall -O2 -fwarn-tabs -funbox-strict-fields
    ghc-prof-options: -prof -auto-all

    other-modules:
        Tests.Data.Predicate
      , Tests.Snap.Predicate
      , Tests.Snap.Route

    build-depends:
        attoparsec       >= 0.10
      , base             >= 4    && < 5
      , bytestring       >= 0.9
      , case-insensitive >= 1.0
      , containers       >= 0.5
      , HUnit            >= 1.2
      , monads-tf        >= 0.1
      , QuickCheck       >= 2.3
      , snap-core        >= 0.9
      , tagged           >= 0.7
      , tasty            >= 0.3
      , tasty-hunit      >= 0.2
      , tasty-quickcheck >= 0.3
      , text             >= 0.11
      , text             >= 0.11
      , transformers     >= 0.3
